<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bkchat.MainActivity" android:id="@+id/mainContID">

    <!--  <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" /> -->

              
		    <ListView android:layout_width="match_parent" 
		        	  android:layout_height="wrap_content" 
		        	  android:layout_above="@+id/chatBoxID"
		        	  android:id="@+id/mesgListID" 
		        	  android:scrollingCache="false" 
		        	  android:padding="5dp" 
		        	  android:transcriptMode="alwaysScroll" 
		        	  android:stackFromBottom="true"> 
	        
	    	</ListView>

			<TableLayout android:id="@+id/payBillForm"
			    		 android:layout_width="match_parent"
			    		 android:layout_height="match_parent"
			    		 android:stretchColumns="1" android:visibility="invisible">
			    		 
			    <TableRow>
			        <TextView
			            android:text="@string/pay_bill_mesg"
			            android:padding="3dip"  
			            android:textStyle="bold"/>
			    </TableRow>			    
			    
			    <TableRow>
			        <TextView
			            android:text="@string/from_acct"
			            android:padding="3dip" />
				    <Spinner
				        android:id="@+id/acctTypes"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:layout_marginBottom="20dp"
				        android:layout_marginTop="20dp" />
			    </TableRow>
			
			    <TableRow>
			        <TextView
			            android:text="@string/to_acct"
			            android:padding="3dip" />
			        <TextView
			            android:text="@string/crd_num"
			            android:padding="3dip" />
			    </TableRow>
			    
			    <TableRow>
			        <TextView
			            android:text="@string/amt"
			            android:padding="3dip" />
			        <EditText android:id="@+id/transAmtID" 
			            	  android:layout_width="wrap_content" 
			        		  android:layout_height="wrap_content" 
			        		  android:layout_weight="1"/>
			    </TableRow>		
			    
			    <TableRow>
			        <Button android:id="@+id/transCancelBtnID" 
			                android:layout_width="wrap_content" 
			                android:layout_height="wrap_content" 
			                android:text="@string/btn_cancel"/>
			        <Button android:id="@+id/transSubmitBtnID" 
			                android:layout_width="wrap_content" 
			                android:layout_height="wrap_content" 
			                android:text="@string/btn_submit" />
			    </TableRow>		
			    		    	    
			</TableLayout>
    
		    <LinearLayout android:id="@+id/chatBoxID" 
		        		  android:layout_width="fill_parent" 
		                  android:layout_height="wrap_content" 
		                  android:orientation="horizontal" 
		                  android:layout_alignParentBottom="true" android:padding="15dp">
		        
		        <EditText android:id="@+id/chatTextID" 
		            	  android:layout_width="wrap_content" 
		        		  android:layout_height="wrap_content" 
		        		  android:layout_weight="0.95"/>
		        
		        <Button android:id="@+id/chatSendBtnID" 
		                android:layout_width="wrap_content" 
		                android:layout_height="wrap_content" 
		                android:text="@string/btn_send" 
		                android:layout_weight="0.05"/>
		    </LinearLayout>

</RelativeLayout>
